<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="tab1_Movies">Movies</string>
    <string name="tab2_TVShows">TV Shows</string>
    <string name="dummy_rating" translatable="false">0%</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="dummy_movie_description" translatable="false">This movie is ....</string>
    <string name="description">Description</string>
    <string name="genre_ids">Genres</string>
    <string name="dummy_genres" translatable="false"><![CDATA[Action, Sci-Fi & Fantasy, Adventure]]></string>
    <string name="dummy_release_date" translatable="false">August 20, 2019</string>
    <string name="dummy_title" translatable="false">Arrow</string>
    <string name="dummy_tvshow_description" translatable="false">This TV show is ....</string>
    <string name="title_language_setting">Language Setting</string>
    <string name="title_movie_actionbar">Movie Details</string>
    <string name="title_tvshow_actionbar">TV Show Details</string>
    <string name="network_error_message">Network is unavailable or server down!</string>

    <string name="bottom_nav_title_movies">Movies</string>
    <string name="bottom_nav_title_tvshows">TVShows</string>
    <string name="bottom_nav_title_favorites">Favorites</string>
    <string name="menu_main_select_as_favorite" translatable="false">Select as favorite</string>
    <string name="toast_favorite_movie">This movie has been set as favorite!</string>
    <string name="toast_unfavorite_movie">This movie has been removed from favorite list!</string>
    <string name="toast_favorite_tvshow">This TV show has been set as favorite!</string>
    <string name="toast_unfavorite_tvshow">This TV show has been removed from favorite list!</string>
    <string name="toast_favorite_deleted">has been deleted.</string>
    <string name="search_movie_hint">Enter a movie title</string>
    <string name="search_tvshow_hint">Enter a TV show name</string>
    <string name="toast_search">Searching </string>
    <string name="title_search">Search</string>

    <string name="key_release_reminder" translatable="false">release_reminder</string>
    <string name="title_release_reminder">Release Reminder</string>
    <string name="summary_release_reminder">Reminder showing the movie that released today</string>
    <string name="key_daily_reminder" translatable="false">daily_reminder</string>
    <string name="title_daily_reminder">Daily Reminder</string>
    <string name="summary_daily_reminder">Reminder for returning to the app</string>
    <string name="title_reminder_setting">Reminder Setting</string>
    <string name="toast_daily_reminder_set">Daily reminder is set!</string>
    <string name="toast_release_reminder_set">Release reminder is set!</string>
    <string name="toast_daily_reminder_cancel">Daily reminder is cancelled!</string>
    <string name="toast_release_reminder_cancel">Release reminder is cancelled!</string>
    <string name="message_daily_reminder">Movie Catalogue is missing you! C\'mon check the newest released movies!</string>
    <string name="content_description_notification_image">Notification image</string>
    <string name="notification_movie_released_message">" has been released today!"</string>
    <string name="title_home">Home</string>
    <string name="movie_detail_image">Movie detail image</string>
    <string name="tv_show_detail_image">TV show detail image</string>
    <string name="favorite_movie_image">Favorite movie image</string>
    <string name="favorite_tv_show_image">Favorite TV show image</string>
    <string name="movie_image">Movie image</string>
    <string name="tv_show_image">TV show image</string>

    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">FAVORITE MOVIES</string>
    <string name="empty_text">NO FAVORITE MOVIES DATA</string>
    <string name="favorite_movie_image_in_widget">Clapperboard image in widget</string>
    <string name="toast_widget_open_favorite_movie">"Opening details of "</string>
</resources>
